[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/AudioSFX.gd" type="Script" id=1]
[ext_resource path="res://audio/level/Forest, Daytime, Birds, Outdoors, Nature, Spring.wav" type="AudioStream" id=2]
[ext_resource path="res://audio/level/Dark Ambiences Pad Showdown.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/player/grass 3 single step 3.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/player/640477__coolshows101sound__jumping-on-grass-3.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/player/390354__josethehedgehog__deslizamiento-de-espada.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/item/421879__gregorquendel__fire-effects-swooshes-bursts-evolving.wav" type="AudioStream" id=8]
[ext_resource path="res://audio/item/242252__ascap__finger-hit-high-glass-bowl-7.wav" type="AudioStream" id=9]
[ext_resource path="res://audio/gui/513330__shelbyshark__horrorsting3.wav" type="AudioStream" id=10]
[ext_resource path="res://audio/gui/628638__el_boss__menu-select-tick.wav" type="AudioStream" id=11]
[ext_resource path="res://audio/gui/157929__teo4__mozar21stpc41.wav" type="AudioStream" id=12]
[ext_resource path="res://audio/gui/335203__doty21__tv-static-looping.wav" type="AudioStream" id=13]

[sub_resource type="Animation" id=1]
resource_name = "LEVEL1"
length = 167.0
loop = true
tracks/0/type = "audio"
tracks/0/path = NodePath("Ambience")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0 )
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Forest")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 2 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
resource_name = "Grass"
length = 0.5
loop = true
tracks/0/type = "audio"
tracks/0/path = NodePath("WalkGrass")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.53408,
"start_offset": 0.05,
"stream": ExtResource( 4 )
}, {
"end_offset": 0.577982,
"start_offset": 0.05,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0, 0.3 )
}

[node name="AudioSFX" type="Node2D"]
script = ExtResource( 1 )

[node name="itens" type="Node2D" parent="."]

[node name="lamp" type="AudioStreamPlayer" parent="itens"]
stream = ExtResource( 8 )
volume_db = -15.0

[node name="glass" type="AudioStreamPlayer" parent="itens"]
stream = ExtResource( 9 )
volume_db = -5.0

[node name="levels" type="Node2D" parent="."]

[node name="Level1" type="Node2D" parent="levels"]

[node name="Ambience" type="AudioStreamPlayer" parent="levels/Level1"]
stream = ExtResource( 3 )
volume_db = -30.0

[node name="Forest" type="AudioStreamPlayer" parent="levels/Level1"]
stream = ExtResource( 2 )
volume_db = -25.0

[node name="LevelAP" type="AnimationPlayer" parent="levels/Level1"]
anims/LEVEL1 = SubResource( 1 )

[node name="player" type="Node2D" parent="."]

[node name="WalkGrass" type="AudioStreamPlayer" parent="player"]
stream = ExtResource( 4 )
volume_db = -30.0
pitch_scale = 2.0

[node name="Jump" type="AudioStreamPlayer" parent="player"]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="Slide" type="AudioStreamPlayer" parent="player"]
stream = ExtResource( 7 )
volume_db = -20.0

[node name="PlayerAP" type="AnimationPlayer" parent="player"]
anims/Grass = SubResource( 2 )

[node name="gui" type="Node2D" parent="."]
pause_mode = 2

[node name="death" type="AudioStreamPlayer" parent="gui"]
stream = ExtResource( 10 )
volume_db = -10.0

[node name="select" type="AudioStreamPlayer" parent="gui"]
stream = ExtResource( 11 )
volume_db = -20.0

[node name="piano" type="AudioStreamPlayer" parent="gui"]
stream = ExtResource( 12 )
volume_db = -20.0

[node name="TV" type="AudioStreamPlayer" parent="gui"]
stream = ExtResource( 13 )
volume_db = -25.0

[connection signal="finished" from="gui/piano" to="." method="_on_piano_finished"]
[connection signal="finished" from="gui/TV" to="." method="_on_TV_finished"]
